--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -37,7 +37,7 @@ pipeline {
             }
             post {
                 success {
-                    archiveArtifacts 'dist/add2vals'
+                    archiveArtifacts 'dist/add2vals/*.zip'
                 }
             }
         }
